--- a/app/views/scheduled_messages/_form.html.erb
+++ b/app/views/scheduled_messages/_form.html.erb
@@ -5,10 +5,8 @@
     hint: "Don't forget, you can format your message using #{link_to "Slack's message formatting rules",
     "https://slack.zendesk.com/hc/en-us/articles/202288908-Formatting-your-messages", target: "_blank"}.".html_safe %>
   <%= check_box_tag :quarterly, checked: false %> Quarterly
-  <div style="display:none" class="quarterly_message_explanation">
+  <div style="display:none; margin-bottom: 1.5em;" class="quarterly_message_explanation">
     This message will be sent to all employees quarterly
-    <br />
-    <br />
   </div>
   <%= form.hidden_field :message_time_frame, value: :onboarding %>
   <%= form.input :days_after_start, label: "Business days after employee starts to send message" %>
